cicd/maven-nexus3/maven-nexus3-servece.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: kube-ops
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
spec:
  selector: 
    app: nexus-server
  ports:
    - name: nexus-http
      port: 8081
      targetPort: 8081
